src/tests/test-src/errors/R24-for-step-zero-f.syntran
let s = 0.0;
for i in [0.0: s: 5.0]
{
}
